# kehuguanlixitong

./: .gitignore  .strawberry_customer_launcher.c  AGENTS.md  README.md  pyproject.toml
docs/ui/: case-progress-workflow-mockup.html  case-progress-workflow-variants.html  customer-overview-v2-mockup.html
scripts/: generate_app_icon.py  generate_icon_options.py  render_ui_qa.py
src/strawberry_customer_management/: __init__.py  ai_capture.py  app.py  approval_importer.py  approval_inbox.py  config.py  markdown_store.py  mcp_ocr_client.py  models.py  paths.py  person_store.py  project_discovery.py  project_store.py
src/strawberry_customer_management/assets/: __init__.py
src/strawberry_customer_management/ui/: __init__.py  app_icon.py  main_window.py  theme.py
src/strawberry_customer_management/ui/pages/: __init__.py  customer_library_page.py  overview_page.py  person_library_page.py  project_management_page.py  quick_capture_page.py  settings_page.py
src/strawberry_customer_management/ui/widgets/: __init__.py  screenshot_input_widget.py
tests/: test_ai_capture.py  test_app_smoke.py  test_approval_importer.py  test_approval_inbox.py  test_config.py  test_markdown_store.py  test_mcp_ocr_client.py  test_overview_layout.py  test_person_store.py  test_project_management_layout.py  test_project_store.py  test_settings_layout.py  test_ui_smoke.py
