[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strawberry-customer-management"
version = "0.1.0"
dependencies = [
  "PySide6>=6.7,<7",
]

[project.scripts]
strawberry-customer-management = "strawberry_customer_management.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
